# nc-zwave-firmware

./: .cproject  .project  .projectlinkstore  UserTask_DataAcquisition.c  UserTask_DataAcquisition.h  app.c  app.h  cmd_handlers.c  cmds_proprietary.c  cmds_proprietary.h  common_supported_func.h  events.h  vscode.conf  zwave_firmware_with_extras.pintool  zwave_firmware_with_extras.slcp  zwave_firmware_with_extras.slpb  zwave_firmware_with_extras.slps
.pdm/: uc.module.setup.CommonProjectPostBuild.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .zwave_firmware_with_extras.freertos.cedit  .zwave_firmware_with_extras.icm20689_driver.cedit  .zwave_firmware_with_extras.zaf_event_distributor_core.cedit  .zwave_firmware_with_extras.zw_core.cedit  .zwave_firmware_with_extras.zw_zaf.cedit
autogen/: .crc_config.crc  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_simple_led_instances.c  sl_simple_rgb_pwm_led_instances.c  sl_simple_rgb_pwm_led_instances.h  sli_mbedtls_config_autogen.h  sli_psa_config_autogen.h
config/: pin_config.h  psa_crypto_config.h  radio_board_brd2603a.h  radio_board_brd2603a_button.h  radio_board_brd2603a_led.h  serial_api_config.h  sl_board_control_config.h  sl_icm20689_config.h  sl_memory_manager_region_config.h  sl_mx25_flash_shutdown_usart_config.h  sl_rail_util_pa_config.h  sl_simple_led_led0_config.h  sl_simple_rgb_pwm_led_rgb_led0_config.h  zaf_appname_config.h  zaf_config.h
simplicity_sdk_2024.6.2/protocol/z-wave/ZAF/ApplicationUtilities/EventHandling/: zaf_event_distributor_ncp.c  zaf_event_distributor_ncp.h
zwave_firmware_with_extras_cmake/: CMakeLists.txt  CMakePresets.json  toolchain.cmake  zwave_firmware_with_extras.cmake
